--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "dataset-builder",
   "version": "1.0.0",
@@ -10,7 +9,8 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
